--- a/index.html
+++ b/index.html
@@ -1,24 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title></title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-
-
+    <title></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
 
 </head>
+
 <body>
-<div class="headerBackground">
-    
-</div>
-<div class="container">
-  <h1>My First Bootstrap Page</h1>
-  <p>This is some text.</p>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <div class="headerBackground">
+    </div>
+    <div class="invoiceBody">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 col-sm-12">
+                    <div class="jawainvoice">
+                        <div class="invoiceHeader">
+                            <img src="assets/Images/Header.png" alt="">
+                        </div>
+                        <div class="invoiceDetails">
+                            <div class="row">
+                                <div class="col-md-8 col-sm-12">
+                                    <div class="customDetails">
+                                        <h4 class="invoiceDetailsTitle">
+                                            CUSTOMER DETALIS
+                                        </h4>
+                                        <ul class="invoiceDetailsList">
+                                            <li>
+                                                <div class="row">
+                                                    <div class="col-sm-2">
+                                                        Name:
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        ABC Trading Company (Hujat)
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="row">
+                                                    <div class="col-sm-2">
+                                                        Address:
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        Office # 7, 4th Floor, Safa Tower
+                                                        Jeddah - 01223- Saudi Arabia
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="row">
+                                                    <div class="col-sm-2">
+                                                        Phone:
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        0123512468
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="row">
+                                                    <div class="col-sm-2">
+                                                        Fax:
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        0123658468
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="row">
+                                                    <div class="col-sm-2">
+                                                        Email:
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        test@sa.com
+                                                    </div>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-md-4 col-sm-12">
+                                    <div class="customDetails">
+                                        <h4 class="invoiceDetailsTitle">
+                                            INVOICE DETALIS
+                                        </h4>
+                                        <ul class="invoiceDetailsList">
+                                            <li>
+                                                <div class="row">
+                                                    <div class="col-sm-4">
+                                                        Number:
+                                                    </div>
+                                                    <div class="col-sm-8">
+                                                        ACC-SINV-2021-00441
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="row">
+                                                    <div class="col-sm-4">
+                                                        Date:
+                                                    </div>
+                                                    <div class="col-sm-8">
+                                                        2021-11-22
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="row">
+                                                    <div class="col-sm-4">
+                                                        Time:
+                                                    </div>
+                                                    <div class="col-sm-8">
+                                                        9:56:20
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="row">
+                                                    <div class="col-sm-4">
+                                                        Tax ID:
+                                                    </div>
+                                                    <div class="col-sm-8">
+                                                        12332312130
+                                                    </div>
+                                                </div>
+                                            </li>
+
+                                        </ul>
+
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                        <table class="invoiceTable">
+                            <thead>
+                                <tr>
+                                    <th class="text-center" width="10%">#item</th>
+                                    <th width="40%">Discription</th>
+                                    <th class="text-center" width="15%">QTY</th>
+                                    <th class="text-center" width=15%>Unit Price</th>
+                                    <th class="text-center" width=15%>Total</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="text-center">1</td>
+                                    <td>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                    </td>
+                                    <td class="text-center">3</td>
+                                    <td class="text-center">200</td>
+                                    <td class="text-center">600</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-center">2</td>
+                                    <td>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                    </td>
+                                    <td class="text-center">3</td>
+                                    <td class="text-center">200</td>
+                                    <td class="text-center">600</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-center">3</td>
+                                    <td>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                    </td>
+                                    <td class="text-center">3</td>
+                                    <td class="text-center">200</td>
+                                    <td class="text-center">600</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-center">4</td>
+                                    <td>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                                    </td>
+                                    <td class="text-center">3</td>
+                                    <td class="text-center">200</td>
+                                    <td class="text-center">600</td>
+                                </tr>
+                            </tbody>
+
+                        </table>
+                        <div class="clearfix">
+                            <div class="invoiceTotal">
+                                <ul>
+                                    <li class="invoiceTotalTitle">
+                                        <span>Total Taxes And Charges</span>
+                                        <span>15</span>
+                                    </li>
+                                    <li class="invoiceTotalDetails">
+                                        <span class="invoiceDetailsTitle">Total Taxes And Charges</span>
+                                        <span class="invoiceDetailsTitle">115.0</span>
+                                    </li>
+                                    <li class="invoiceTotalFooter">
+                                        <p>In Words (SAR)</p>
+                                        <p>One hundred and fifteen Saudi riyals only</p>
+                                    </li>
+                                </ul>
+
+                            </div>
+                        </div>
+                        <div class="invoiceNote">
+                            <h4 class="invoiceDetailsTitle">Note</h4>
+                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                                invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+                                accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+                                sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+                                sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                                aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+                                rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
+                                amet.
+                                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                                invidunt ut labore et dolore</p>
+                        </div>
+                        <div class="invoiceFooter">
+                            <img src="assets/Images/footer.png" alt="">
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
+
 </html>
