--- a/index.html
+++ b/index.html
@@ -20,125 +20,123 @@
     <div class="invoiceBody">
         <div class="container">
             <div class="row">
-                <div class="col-md-10 col-sm-12">
+                <div class="col-md-10 col-12">
                     <div class="jawainvoice">
                         <div class="invoiceHeader">
                             <img src="assets/Images/Header.png" alt="">
                         </div>
                         <div class="invoiceDetails">
-                            <div class="row">
-                                <div class="col-md-8 col-sm-12">
-                                    <div class="customDetails">
-                                        <h4 class="invoiceDetailsTitle">
-                                            CUSTOMER DETALIS
-                                        </h4>
-                                        <ul class="invoiceDetailsList">
-                                            <li>
-                                                <div class="row">
-                                                    <div class="col-sm-2">
-                                                        Name:
-                                                    </div>
-                                                    <div class="col-sm-6">
-                                                        ABC Trading Company (Hujat)
-                                                    </div>
+                            <div class="col-md-8 col-xs-12">
+                                <div class="customDetails">
+                                    <h4 class="invoiceDetailsTitle">
+                                        CUSTOMER DETALIS
+                                    </h4>
+                                    <ul class="invoiceDetailsList">
+                                        <li>
+                                            <div class="row">
+                                                <div class="col-sm-2">
+                                                    Name:
                                                 </div>
-                                            </li>
-                                            <li>
-                                                <div class="row">
-                                                    <div class="col-sm-2">
-                                                        Address:
-                                                    </div>
-                                                    <div class="col-sm-6">
-                                                        Office # 7, 4th Floor, Safa Tower
-                                                        Jeddah - 01223- Saudi Arabia
-                                                    </div>
+                                                <div class="col-sm-6">
+                                                    ABC Trading Company (Hujat)
                                                 </div>
-                                            </li>
-                                            <li>
-                                                <div class="row">
-                                                    <div class="col-sm-2">
-                                                        Phone:
-                                                    </div>
-                                                    <div class="col-sm-6">
-                                                        0123512468
-                                                    </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="row">
+                                                <div class="col-sm-2">
+                                                    Address:
                                                 </div>
-                                            </li>
-                                            <li>
-                                                <div class="row">
-                                                    <div class="col-sm-2">
-                                                        Fax:
-                                                    </div>
-                                                    <div class="col-sm-6">
-                                                        0123658468
-                                                    </div>
+                                                <div class="col-sm-6">
+                                                    Office # 7, 4th Floor, Safa Tower
+                                                    Jeddah - 01223- Saudi Arabia
                                                 </div>
-                                            </li>
-                                            <li>
-                                                <div class="row">
-                                                    <div class="col-sm-2">
-                                                        Email:
-                                                    </div>
-                                                    <div class="col-sm-6">
-                                                        test@sa.com
-                                                    </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="row">
+                                                <div class="col-sm-2">
+                                                    Phone:
                                                 </div>
-                                            </li>
-                                        </ul>
-                                    </div>
+                                                <div class="col-sm-6">
+                                                    0123512468
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="row">
+                                                <div class="col-sm-2">
+                                                    Fax:
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    0123658468
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="row">
+                                                <div class="col-sm-2">
+                                                    Email:
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    test@sa.com
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
                                 </div>
-                                <div class="col-md-4 col-sm-12">
-                                    <div class="customDetails">
-                                        <h4 class="invoiceDetailsTitle">
-                                            INVOICE DETALIS
-                                        </h4>
-                                        <ul class="invoiceDetailsList">
-                                            <li>
-                                                <div class="row">
-                                                    <div class="col-sm-4">
-                                                        Number:
-                                                    </div>
-                                                    <div class="col-sm-8">
-                                                        ACC-SINV-2021-00441
-                                                    </div>
+                            </div>
+                            <div class="col-md-4 col-xs-12">
+                                <div class="customDetails">
+                                    <h4 class="invoiceDetailsTitle">
+                                        INVOICE DETALIS
+                                    </h4>
+                                    <ul class="invoiceDetailsList">
+                                        <li>
+                                            <div class="row">
+                                                <div class="col-sm-4">
+                                                    Number:
                                                 </div>
-                                            </li>
-                                            <li>
-                                                <div class="row">
-                                                    <div class="col-sm-4">
-                                                        Date:
-                                                    </div>
-                                                    <div class="col-sm-8">
-                                                        2021-11-22
-                                                    </div>
+                                                <div class="col-sm-8">
+                                                    ACC-SINV-2021-00441
                                                 </div>
-                                            </li>
-                                            <li>
-                                                <div class="row">
-                                                    <div class="col-sm-4">
-                                                        Time:
-                                                    </div>
-                                                    <div class="col-sm-8">
-                                                        9:56:20
-                                                    </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="row">
+                                                <div class="col-sm-4">
+                                                    Date:
                                                 </div>
-                                            </li>
-                                            <li>
-                                                <div class="row">
-                                                    <div class="col-sm-4">
-                                                        Tax ID:
-                                                    </div>
-                                                    <div class="col-sm-8">
-                                                        12332312130
-                                                    </div>
+                                                <div class="col-sm-8">
+                                                    2021-11-22
                                                 </div>
-                                            </li>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="row">
+                                                <div class="col-sm-4">
+                                                    Time:
+                                                </div>
+                                                <div class="col-sm-8">
+                                                    9:56:20
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="row">
+                                                <div class="col-sm-4">
+                                                    Tax ID:
+                                                </div>
+                                                <div class="col-sm-8">
+                                                    12332312130
+                                                </div>
+                                            </div>
+                                        </li>
 
-                                        </ul>
-
-                                    </div>
+                                    </ul>
 
                                 </div>
+
                             </div>
                         </div>
                         <table class="invoiceTable">
