--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <div class="invoiceHeader">
                             <img src="assets/Images/Header.png" alt="">
                         </div>
-                        <div class="invoiceDetails">
-                            <div class="col-md-8 col-xs-12">
+                        <div class="invoiceDetails clearfix">
+                            <div class="col-md-8 col-sm-8 col-xs-12">
                                 <div class="customDetails">
                                     <h4 class="invoiceDetailsTitle">
                                         CUSTOMER DETALIS
@@ -34,20 +34,20 @@
                                     <ul class="invoiceDetailsList">
                                         <li>
                                             <div class="row">
-                                                <div class="col-sm-2">
+                                                <div class="col-md-2 col-sm-3">
                                                     Name:
                                                 </div>
-                                                <div class="col-sm-6">
+                                                <div class="col-md-6 col-sm-9">
                                                     ABC Trading Company (Hujat)
                                                 </div>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="row">
-                                                <div class="col-sm-2">
+                                                <div class="col-md-2 col-sm-3">
                                                     Address:
                                                 </div>
-                                                <div class="col-sm-6">
+                                                <div class="col-md-6 col-sm-9">
                                                     Office # 7, 4th Floor, Safa Tower
                                                     Jeddah - 01223- Saudi Arabia
                                                 </div>
@@ -55,30 +55,30 @@
                                         </li>
                                         <li>
                                             <div class="row">
-                                                <div class="col-sm-2">
+                                                <div class="col-md-2 col-sm-3">
                                                     Phone:
                                                 </div>
-                                                <div class="col-sm-6">
+                                                <div class="col-md-6 col-sm-9">
                                                     0123512468
                                                 </div>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="row">
-                                                <div class="col-sm-2">
+                                                <div class="col-md-2 col-sm-3">
                                                     Fax:
                                                 </div>
-                                                <div class="col-sm-6">
+                                                <div class="col-md-6 col-sm-9">
                                                     0123658468
                                                 </div>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="row">
-                                                <div class="col-sm-2">
+                                                <div class="col-md-2 col-sm-3">
                                                     Email:
                                                 </div>
-                                                <div class="col-sm-6">
+                                                <div class="col-md-6 col-sm-9">
                                                     test@sa.com
                                                 </div>
                                             </div>
@@ -86,7 +86,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-md-4 col-xs-12">
+                            <div class="col-md-4  col-sm-4 col-xs-12">
                                 <div class="customDetails">
                                     <h4 class="invoiceDetailsTitle">
                                         INVOICE DETALIS
@@ -94,40 +94,40 @@
                                     <ul class="invoiceDetailsList">
                                         <li>
                                             <div class="row">
-                                                <div class="col-sm-4">
+                                                <div class="col-md-4 col-sm-5">
                                                     Number:
                                                 </div>
-                                                <div class="col-sm-8">
+                                                <div class="col-md-8 col-sm-7">
                                                     ACC-SINV-2021-00441
                                                 </div>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="row">
-                                                <div class="col-sm-4">
+                                                <div class="col-md-4 col-sm-5">
                                                     Date:
                                                 </div>
-                                                <div class="col-sm-8">
+                                                <div class="col-md-8 col-sm-7">
                                                     2021-11-22
                                                 </div>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="row">
-                                                <div class="col-sm-4">
+                                                <div class="col-md-4 col-sm-7">
                                                     Time:
                                                 </div>
-                                                <div class="col-sm-8">
+                                                <div class="col-md-8 col-sm-7">
                                                     9:56:20
                                                 </div>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="row">
-                                                <div class="col-sm-4">
+                                                <div class="col-md-4 col-sm-5">
                                                     Tax ID:
                                                 </div>
-                                                <div class="col-sm-8">
+                                                <div class="col-md-8 col-sm-7">
                                                     12332312130
                                                 </div>
                                             </div>
