--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="invoiceBody">
         <div class="container">
             <div class="row">
-                <div class="col-md-9 col-sm-9 col-xs-11">
+                <div class="col-md-10 col-sm-10 col-xs-11">
                     <div class="jawainvoice">
                         <div class="invoiceHeader">
                             <img src="assets/Images/Header.png" alt="">
@@ -35,51 +35,51 @@
                                         <li>
                                             <div class="row">
                                                 <div class="col-md-2 col-sm-3">
-                                                    Name:
+                                                   <span> Name:</span>
                                                 </div>
                                                 <div class="col-md-6 col-sm-9">
-                                                    ABC Trading Company (Hujat)
+                                                    <span>ABC Trading Company (Hujat)</span>
                                                 </div>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="row">
                                                 <div class="col-md-2 col-sm-3">
-                                                    Address:
+                                                   <span> Address:</span>
                                                 </div>
                                                 <div class="col-md-6 col-sm-9">
-                                                    Office # 7, 4th Floor, Safa Tower
-                                                    Jeddah - 01223- Saudi Arabia
+                                                  <span>  Office # 7, 4th Floor, Safa Tower
+                                                    Jeddah - 01223- Saudi Arabia</span>
                                                 </div>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="row">
                                                 <div class="col-md-2 col-sm-3">
-                                                    Phone:
+                                                   <span> Phone:</span>
                                                 </div>
                                                 <div class="col-md-6 col-sm-9">
-                                                    0123512468
+                                                   <span> 0123512468</span>
                                                 </div>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="row">
                                                 <div class="col-md-2 col-sm-3">
-                                                    Fax:
+                                                    <span>Fax:</span>
                                                 </div>
                                                 <div class="col-md-6 col-sm-9">
-                                                    0123658468
+                                                    <span>0123658468</span>
                                                 </div>
                                             </div>
                                         </li>
                                         <li>
                                             <div class="row">
                                                 <div class="col-md-2 col-sm-3">
-                                                    Email:
+                                                    <span>Email:</span>
                                                 </div>
                                                 <div class="col-md-6 col-sm-9">
-                                                    test@sa.com
+                                                  <span>  test@sa.com</span>
                                                 </div>
                                             </div>
                                         </li>
