--- a/index.html
+++ b/index.html
@@ -26,110 +26,93 @@
                             <img src="assets/Images/Header.png" alt="">
                         </div>
                         <div class="invoiceDetails clearfix">
-                            <div class="col-md-8 col-sm-7 col-xs-12">
+                            <div class="col-md-8 col-sm-7 col-xs-7">
                                 <div class="customDetails">
                                     <h4 class="invoiceDetailsTitle">
                                         CUSTOMER DETALIS
                                     </h4>
                                     <ul class="invoiceDetailsList">
-                                        <li>
-                                            <div class="row">
-                                                <div class="col-md-2 col-sm-3">
-                                                   <span> Name:</span>
-                                                </div>
-                                                <div class="col-md-6 col-sm-9">
-                                                    <span>ABC Trading Company (Hujat)</span>
-                                                </div>
+                                        <li class="row">
+                                            <div class="col-md-2 col-sm-3">
+                                                <span> Name:</span>
+                                            </div>
+                                            <div class="col-md-6 col-sm-9">
+                                                <span>ABC Trading Company (Hujat)</span>
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="row">
-                                                <div class="col-md-2 col-sm-3">
-                                                   <span> Address:</span>
-                                                </div>
-                                                <div class="col-md-6 col-sm-9">
-                                                  <span>  Office # 7, 4th Floor, Safa Tower
+                                        <li class="row">
+
+                                            <div class="col-md-2 col-sm-4">
+                                                <span> Address:</span>
+                                            </div>
+                                            <div class="col-md-6 col-sm-8">
+                                                <span> Office # 7, 4th Floor, Safa Tower
                                                     Jeddah - 01223- Saudi Arabia</span>
-                                                </div>
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="row">
-                                                <div class="col-md-2 col-sm-3">
-                                                   <span> Phone:</span>
-                                                </div>
-                                                <div class="col-md-6 col-sm-9">
-                                                   <span> 0123512468</span>
-                                                </div>
+                                        <li class="row">
+                                            <div class="col-md-2 col-sm-3">
+                                                <span> Phone:</span>
+                                            </div>
+                                            <div class="col-md-6 col-sm-9">
+                                                <span> 0123512468</span>
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="row">
-                                                <div class="col-md-2 col-sm-3">
-                                                    <span>Fax:</span>
-                                                </div>
-                                                <div class="col-md-6 col-sm-9">
-                                                    <span>0123658468</span>
-                                                </div>
+                                        <li class="row">
+                                            <div class="col-md-2 col-sm-3">
+                                                <span>Fax:</span>
+                                            </div>
+                                            <div class="col-md-6 col-sm-9">
+                                                <span>0123658468</span>
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="row">
-                                                <div class="col-md-2 col-sm-3">
-                                                    <span>Email:</span>
-                                                </div>
-                                                <div class="col-md-6 col-sm-9">
-                                                  <span>  test@sa.com</span>
-                                                </div>
+                                        <li class="row">
+                                            <div class="col-md-2 col-sm-3">
+                                                <span>Email:</span>
+                                            </div>
+                                            <div class="col-md-6 col-sm-9">
+                                                <span> test@sa.com</span>
                                             </div>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-md-4  col-sm-5 col-xs-12">
+                            <div class="col-md-4  col-sm-5 col-xs-5">
                                 <div class="customDetails">
                                     <h4 class="invoiceDetailsTitle">
                                         INVOICE DETALIS
                                     </h4>
                                     <ul class="invoiceDetailsList">
-                                        <li>
-                                            <div class="row">
-                                                <div class="col-md-4 col-sm-5">
-                                                    Number:
-                                                </div>
-                                                <div class="col-md-8 col-sm-7">
-                                                    ACC-SINV-2021-00441
-                                                </div>
+                                        <li class="row">
+                                            <div class="col-md-4 col-sm-3">
+                                                Number:
+                                            </div>
+                                            <div class="col-md-8 col-sm-9">
+                                                ACC-SINV-2021-00441
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="row">
-                                                <div class="col-md-4 col-sm-5">
-                                                    Date:
-                                                </div>
-                                                <div class="col-md-8 col-sm-7">
-                                                    2021-11-22
-                                                </div>
+                                        <li class="row">
+                                            <div class="col-md-4 col-sm-3">
+                                                Date:
+                                            </div>
+                                            <div class="col-md-8 col-sm-9">
+                                                2021-11-22
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="row">
-                                                <div class="col-md-4 col-sm-7">
-                                                    Time:
-                                                </div>
-                                                <div class="col-md-8 col-sm-7">
-                                                    9:56:20
-                                                </div>
+                                        <li class="row">
+                                            <div class="col-md-4 col-sm-3">
+                                                Time:
+                                            </div>
+                                            <div class="col-md-8 col-sm-9">
+                                                9:56:20
                                             </div>
                                         </li>
-                                        <li>
-                                            <div class="row">
-                                                <div class="col-md-4 col-sm-5">
-                                                    Tax ID:
-                                                </div>
-                                                <div class="col-md-8 col-sm-7">
-                                                    12332312130
-                                                </div>
+                                        <li class="row">
+                                            <div class="col-md-4 col-sm-3">
+                                                Tax ID:
+                                            </div>
+                                            <div class="col-md-8 col-sm-9">
+                                                12332312130
                                             </div>
                                         </li>
 
