--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
 
                         </table>
                         <div class="clearfix">
+                            <div class="qrCodeImg">
+                                <img src="assets/images/qrCode.png" alt="">
+                            </div>
                             <div class="invoiceTotal">
                                 <ul>
                                     <li class="invoiceTotalTitle">
