--- a/index.html
+++ b/index.html
@@ -125,11 +125,21 @@
                         <table class="invoiceTable">
                             <thead>
                                 <tr>
-                                    <th class="text-center" width="10%">#item</th>
-                                    <th width="40%">Discription</th>
-                                    <th class="text-center" width="15%">QTY</th>
-                                    <th class="text-center" width=15%>Unit Price</th>
-                                    <th class="text-center" width=15%>Total</th>
+                                    <th class="text-center" width="10%">#item
+                                        <p>الرقم</p>
+                                    </th>
+                                    <th width="40%">Discription
+                                        <p>الوصف</p>
+                                    </th>
+                                    <th class="text-center" width="15%">QTY
+                                        <p>الكمية</p>
+                                    </th>
+                                    <th class="text-center" width=15%>Unit Price
+                                        <p>سعر الوحدة</p>
+                                    </th>
+                                    <th class="text-center" width=15%>Total
+                                        <p>المجموع</p>
+                                    </th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -175,12 +185,20 @@
                             <div class="invoiceTotal">
                                 <ul>
                                     <li class="invoiceTotalTitle">
-                                        <span>Total Taxes And Charges</span>
-                                        <span>15</span>
+                                        <div class="clearfix">
+                                            <span>Total Taxes And Charges
+                                                <p>إجمالي الضرائب والرسوم</p>
+                                            </span>
+                                            <span>15</span>
+                                        </div>
                                     </li>
                                     <li class="invoiceTotalDetails">
-                                        <span class="invoiceDetailsTitle">Total Taxes And Charges</span>
-                                        <span class="invoiceDetailsTitle">115.0</span>
+                                        <div class="clearfix">
+                                            <span class="invoiceDetailsTitle">Total Amount
+                                                <p>المبلغ الإجمالي</p>
+                                            </span>
+                                            <span class="invoiceDetailsTitle">115.0</span>
+                                        </div>
                                     </li>
                                     <li class="invoiceTotalFooter">
                                         <p>In Words (SAR)</p>
